Prevent overflows

--- a/application/static/style.css
+++ b/application/static/style.css
@@ -11,6 +11,10 @@ fieldset {
 	border: 2px groove !important;
 }
 
+.wrap {
+	word-wrap: break-word !important;
+}
+
 .pad {
 	padding: 5px !important;
 }
